Project

General

Profile

Actions

Fix #11663

closed

erasure-code-profile: verify profile content

Added by Loïc Dachary almost 9 years ago. Updated almost 9 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The profile stored by the plugin may be different from the one set by the user: it includes defaults. When the plugin is initialized, the profile is modified to include the default values. Verify that the modified profile matches what the get_profile() method returns, to guard against inconsistencies from the erasure code plugin implementation.

Actions #1

Updated by Loïc Dachary almost 9 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Loïc Dachary almost 9 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF